categories part complated

--- a/index.html
+++ b/index.html
@@ -26,5 +26,18 @@
             </div>
         </div>
     </header>
+    <!-- main part start -->
+    <main>
+      <div class="container">
+        <div id="categories">
+          <h1>75% OFF</h1>
+          <h4 class="section-greeting">OUR HOLIDAY DEALS ARE BETTER</h4>
+          <h2 class="section-title">ALL CATEGORIES</h2>
+          <div class="categories-img">
+            <img src="images/New Year Photo.png" alt="new years photo">
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
