midnight party section complated

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <!-- main part start -->
     <main>
-      <div class="container">
+      <section class="container">
         <div id="categories">
           <h1>75% OFF</h1>
           <h4 class="section-greeting">OUR HOLIDAY DEALS ARE BETTER</h4>
@@ -37,7 +37,16 @@
             <img src="images/New Year Photo.png" alt="new years photo">
           </div>
         </div>
-      </div>
+      </section>
+      <section class="container">
+        <div class="midnight">
+          <div class="midnight-content">
+            <h1>Welcome to <br> midnight party</h1>
+          <p>Questions worth asking, ideas worth unpacking. Welcome to Midnight has become a conversation we've circled back to every year since. i'm proud of these words</p>
+          <button class="btn-primary">Join Now</button>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
