new best offer section added

--- a/index.html
+++ b/index.html
@@ -47,6 +47,24 @@
           </div>
         </div>
       </section>
+      <section class="container">
+        <div class="new-best-offer">
+          <div class="coming-soon">
+            <h4 class="section-greeting">NEW BEST OFFER</h4>
+            <h2 class="section-title">Coming Soon</h2>
+            <p>The words below were written three years ago. i was wrestling with New Year’s at the time, struggling but also fascinated by the attention given to a moment</p>
+          </div>
+          <div class="best-offer-img">
+            <img src="images/Ellipse 1.png" alt="">
+          </div>
+          <div class="new-years">
+            <h1>2024</h1>
+            <p>Another year comes to a close. Another year begins.
+              With a moment in between.</p>
+              <img src="images/Group 96.png" alt="">
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
