our awesome portfolio section complate

--- a/index.html
+++ b/index.html
@@ -14,54 +14,96 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
-
     <!-- banner section -->
     <header>
-        <div class="container">
-            <div class="banner">
-                <div class="banner-contain">
-                    <h3>Happy New Year</h3>
-                    <h1>Enjoy this Party & Celebration</h1>
-                </div>
-            </div>
+      <div class="container">
+        <div class="banner">
+          <div class="banner-contain">
+            <h3>Happy New Year</h3>
+            <h1>Enjoy this Party & Celebration</h1>
+          </div>
         </div>
+      </div>
     </header>
     <!-- main part start -->
     <main>
+      <!-- All categories part start -->
       <section class="container">
         <div id="categories">
           <h1>75% OFF</h1>
           <h4 class="section-greeting">OUR HOLIDAY DEALS ARE BETTER</h4>
           <h2 class="section-title">ALL CATEGORIES</h2>
           <div class="categories-img">
-            <img src="images/New Year Photo.png" alt="new years photo">
+            <img src="images/New Year Photo.png" alt="new years photo" />
           </div>
         </div>
       </section>
+
+      <!-- Midnight-content part start -->
       <section class="container">
         <div class="midnight">
           <div class="midnight-content">
-            <h1>Welcome to <br> midnight party</h1>
-          <p>Questions worth asking, ideas worth unpacking. Welcome to Midnight has become a conversation we've circled back to every year since. i'm proud of these words</p>
-          <button class="btn-primary">Join Now</button>
+            <h1>
+              Welcome to <br />
+              midnight party
+            </h1>
+            <p>
+              Questions worth asking, ideas worth unpacking. Welcome to Midnight
+              has become a conversation we've circled back to every year since.
+              i'm proud of these words
+            </p>
+            <button class="btn-primary">Join Now</button>
           </div>
         </div>
       </section>
+
+      <!-- New-best-offer part start -->
       <section class="container">
         <div class="new-best-offer">
           <div class="coming-soon">
             <h4 class="section-greeting">NEW BEST OFFER</h4>
             <h2 class="section-title">Coming Soon</h2>
-            <p>The words below were written three years ago. i was wrestling with New Year’s at the time, struggling but also fascinated by the attention given to a moment</p>
+            <p>
+              The words below were written three years ago. i was wrestling with
+              New Year’s at the time, struggling but also fascinated by the
+              attention given to a moment
+            </p>
           </div>
           <div class="best-offer-img">
-            <img src="images/Ellipse 1.png" alt="">
+            <img src="images/Ellipse 1.png" alt="" />
           </div>
           <div class="new-years">
             <h1>2024</h1>
-            <p>Another year comes to a close. Another year begins.
-              With a moment in between.</p>
-              <img src="images/Group 96.png" alt="">
+            <p>
+              Another year comes to a close. Another year begins. With a moment
+              in between.
+            </p>
+            <img src="images/Group 96.png" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <!-- Our-awesome-portfolio -->
+      <section class="container">
+        <div class="our-awesome-portfolio">
+          <div class="awesome-content">
+            <h4 class="section-greeting">THE BEST GIFTS</h4>
+            <h2 class="section-title">Our Awesome Portfolio</h2>
+            <p>
+              One of the great things about design portfolios is the variety of
+              ideas. Take five successful artists and you’ll probably have five
+              radically different design portfolios.
+            </p>
+          </div>
+          <div class="awesome-portfolio-items">
+            <div class="awesome-portfolio-items-img">
+              <img src="images/Rectangle 4.png" alt="" />
+              <img src="images/Rectangle 3.png" alt="" />
+              <img src="images/Rectangle 6.png" alt="" />
+              <img src="images/Rectangle 7.png" alt="" />
+              <img src="images/Rectangle 5.png" alt="" />
+              <img src="images/Rectangle 1.png" alt="" />
+            </div>
           </div>
         </div>
       </section>
