subscribe newsletter part complate

--- a/index.html
+++ b/index.html
@@ -107,6 +107,19 @@
           </div>
         </div>
       </section>
+      <!-- Subscribe Newsletter part start -->
+      <section class="container">
+        <div id="subscribe">
+          <div class="subscribe-items">
+            <img src="images/Group 61.png" alt="Group 61" />
+            <h1>Subscribe Newsletter</h1>
+            <p>Each open marketing website, 75% discount is being offered here.Subscribe this channel to get all new information</p>
+            <form>
+              <input type="email" name="" id="" placeholder="user@gmail.com" required><button class="btn-primary subscribe-btn">Subscribe</button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
