--- a/index.html
+++ b/index.html
@@ -113,13 +113,52 @@
           <div class="subscribe-items">
             <img src="images/Group 61.png" alt="Group 61" />
             <h1>Subscribe Newsletter</h1>
-            <p>Each open marketing website, 75% discount is being offered here.Subscribe this channel to get all new information</p>
+            <p>
+              Each open marketing website, 75% discount is being offered
+              here.Subscribe this channel to get all new information
+            </p>
             <form>
-              <input type="email" name="" id="" placeholder="user@gmail.com" required><button class="btn-primary subscribe-btn">Subscribe</button>
+              <input
+                type="email"
+                name=""
+                id=""
+                placeholder="user@gmail.com"
+                required
+              /><button class="btn-primary subscribe-btn">Subscribe</button>
             </form>
           </div>
         </div>
       </section>
     </main>
+    <footer id="main-footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-contract">
+            <div class="contract-adress">
+              <h5>Momtaz Plaza (4th Floor), House # 07 , Road # 04</h5>
+              <h5>Dhanmondi, Dhaka- 1205</h5>
+            </div>
+            <div class="contract-social">
+              <div class="call">
+                <img src="images/Call.png" alt=""><p>+00 123 584 124</p>
+              </div>
+              <div class="website"><img src="images/Website.png" alt=""><p>www.website.com</p></div>
+            </div>
+          </div>
+          <hr>
+          <div class="social-links">
+            <img src="images/Facebook.png" alt="">
+            <img src="images/Instagram.png" alt="">
+            <img src="images/Linkedin.png" alt="">
+            <img src="images/Twitter.png" alt="">
+          </div>
+          <hr>
+          <div class="copyright">
+            <p>2024, All Rights Reserved.</p>
+            <p>Unsubscribe</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
