hotel section complated

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <div class="container">
         <div class="banner">
-          <div class="banner-contain">
+          <div class="banner-content">
             <h3>Happy New Year</h3>
             <h1>Enjoy this Party & Celebration</h1>
           </div>
@@ -54,9 +54,23 @@
             </p>
             <button class="btn-primary">Join Now</button>
           </div>
+          <div class="midnight-img">
+            <img src="images/Group 70.png" alt="">
+          </div>
         </div>
       </section>
 
+      <!-- Hotel part start -->
+      <section class="container">
+        <div id="hotel">
+          <div class="hotel-content">
+            <h5> <span>Place:</span> Panosi Hotel</h5>
+            <h5> <span> Date:</span> 31 December Night 2023</h5>
+            <h5> <span>Time:</span>  Evening 7.00 pm to 01.30 pm</h5>
+            <button class="btn-primary">Join Now</button>
+          </div>
+        </div>
+      </section>
       <!-- New-best-offer part start -->
       <section class="container">
         <div class="new-best-offer">
@@ -102,7 +116,7 @@
               <img src="images/Rectangle 6.png" alt="" />
               <img src="images/Rectangle 7.png" alt="" />
               <img src="images/Rectangle 5.png" alt="" />
-              <img src="images/Rectangle 1.png" alt="" />
+              <img src="images/Rectangle 8.png" alt="" />
             </div>
           </div>
         </div>
