holiday section and favicon added and completed the project

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Year</title>
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <!-- google fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto:wght@500;700&display=swap"
       rel="stylesheet"
     />
+    <!-- styles css -->
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
@@ -97,6 +101,28 @@
         </div>
       </section>
 
+      <section>
+        <div class="container">
+          <div class="holidays">
+            <div class="holidays-content">
+              <h4>WHAT IS FUNCTIONAL</h4>
+              <h1><span style="color: #F00;"> Holidays </span> Sale 75%</h1>
+              <p>In 2012, Holiday Discount Centre changed into a holiday price comparison website to help UK travel agents promote their fantastic deals. Holiday Discount Centre found that many travel companies had great offers but required somewhere to promote these amazing deals to the public. </p>
+            </div>
+            <div class="holiday-items">
+              <div class="holiday-inner">
+                <img class="group-75" src="images/Group 75.png" alt="">
+                <img class="discount" src="images/Group 44.png" alt="">
+                <img class="rectangle-1" src="images/Rectangle 1.png" alt="">
+              </div>
+              <div>
+                <img class="rectangle-2" src="images/Rectangle 2.png" alt="">
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- Our-awesome-portfolio -->
       <section class="container">
         <div class="our-awesome-portfolio">
